--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "suite",
   "private": true,
   "scripts": {
-    "cm": "git-cz"
+    "cm": "git-cz",
+    "precommit": "lint-staged",
+    "pretty": "prettier \"**/*.{js,jsx}\" --write --trailing-comma=es5 --single-quote"
   },
   "devDependencies": {
     "chalk": "2.0.1",
     "commitizen": "2.9.6",
     "cz-customizable": "5.0.0",
-    "lerna": "2.0.0-rc.5"
+    "husky": "0.14.3",
+    "lerna": "2.0.0-rc.5",
+    "lint-staged": "4.0.1",
+    "prettier": "1.5.2"
   },
   "devEngines": {
     "node": ">=8.0.0",
