--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,7 @@
 {
   "*.{js,jsx}": [
     "prettier --write --trailing-comma=es5 --single-quote",
-    "git add"
+    "git add",
+    "eslint"
   ]
 }
