--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "chalk": "2.0.1",
     "commitizen": "2.9.6",
     "cz-customizable": "5.0.0",
+    "eslint": "4.2.0",
+    "eslint-config-prettier": "2.3.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-node": "5.1.0",
+    "eslint-plugin-prettier": "2.1.2",
+    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-standard": "3.0.1",
     "husky": "0.14.3",
     "lerna": "2.0.0-rc.5",
     "lint-staged": "4.0.1",
