--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
     "husky": "0.14.3",
-    "lerna": "2.0.0-rc.5",
+    "lerna": "2.0.0",
     "lint-staged": "4.0.1",
     "prettier": "1.5.2"
   },
