chore(root): set up compilation and testing config, add react packages
Add minimum required babel packages, set up configuration file. Add testing libraries (jest,
enzyme), set up configuration file. Add react, react-dom and prop-types packages. Integrate new
packages with eslint.

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,8 @@
 {
   "*.{js,jsx}": [
-    "prettier --write --trailing-comma=es5 --single-quote",
+    "prettier --trailing-comma=es5 --single-quote --write",
     "git add",
-    "eslint"
+    "eslint",
+    "jest --findRelatedTests"
   ]
 }
