--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
   "lerna": "2.0.0",
-  "packages": [
-    "packages/*"
-  ],
+  "npmClient": "npm",
+  "packages": ["packages/*"],
   "version": "independent"
 }
