chore(root): add default flags to lerna publish command

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,13 @@
 {
   "lerna": "2.0.0",
+  "version": "independent",
   "npmClient": "npm",
-  "packages": ["packages/*"],
-  "version": "independent"
+  "packages": [
+    "packages/*"
+  ],
+  "commands": {
+    "publish": {
+      "conventionalCommits": true
+    }
+  }
 }
