feat(icon-base): create commonjs and es module builds
Create separate build scripts for commonjs and es module builds. Change env fields in .babelrc to
enable different module builds. Add npm-run-all package to manage prepublish script sequence. Add
rimraf to enable cross-platform clean-up functionality.

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
   "env": {
-    "production": {
+    "es": {
       "presets": [["latest", { "es2015": { "modules": false } }], "react"],
       "plugins": ["transform-object-rest-spread"]
     },
-    "development": {
-      "presets": [["latest", { "es2015": { "modules": false } }], "react"],
+    "cjs": {
+      "presets": ["latest", "react"],
       "plugins": ["transform-object-rest-spread"]
     },
     "test": {
