--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "jest": "20.0.4",
     "lerna": "2.0.0",
     "lint-staged": "4.0.1",
+    "npm-run-all": "4.0.2",
     "prettier": "1.5.3",
-    "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
-    "react-test-renderer": "15.6.1"
+    "react-test-renderer": "15.6.1",
+    "rimraf": "2.6.1"
   },
   "devEngines": {
     "node": ">=8.0.0",
