--- a/packages/icon-base/package.json
+++ b/packages/icon-base/package.json
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/suitejs/suitejs/tree/master/packages/icon-base"
+    "url": "https://github.com/suitejs/suitejs.git"
   },
   "bugs": {
     "url": "https://github.com/suitejs/suitejs/issues"
