--- a/packages/icon-base/package.json
+++ b/packages/icon-base/package.json
@@ -30,10 +30,11 @@
     "build:es": "BABEL_ENV=es babel src/ --out-dir es/ --ignore spec.js",
     "clean": "rimraf es/ cjs/",
     "lint": "eslint src/ --cache --ext js,jsx",
-    "prepublish": "npm-run-all clean --parallel lint test build:*",
     "test": "jest --runInBand",
     "test:coverage": "jest --runInBand --coverage",
-    "test:watch": "jest --runInBand --watch"
+    "test:watch": "jest --runInBand --watch",
+    "prevalidate": "npm install",
+    "validate": "npm-run-all clean --parallel lint test build:*"
   },
   "dependencies": {
     "prop-types": "^15.5.7"
@@ -41,5 +42,8 @@
   "peerDependencies": {
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
