docs(root): add repository documentation
Add root level documentation covering set up and development guides. Add status badges for
repository and packages.

--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,10 @@
   ],
   "commands": {
     "publish": {
-      "conventionalCommits": true
+      "conventionalCommits": true,
+      "ignore": [
+        "*.md"
+      ]
     }
   }
 }
