chore(root): update email notification settings for travis ci
Turn off email notifications for successful builds, still notify on failure.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ script:
   - lerna run build:es --parallel
 git:
   depth: 10
+notifications:
+  email:
+    on_failure: always
+    on_success: never
