--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -19,6 +19,8 @@
     "url": "https://github.com/suitejs/suitejs/issues"
   },
   "scripts": {
+    "presvgo": "rimraf svg/optim/",
+    "svgo": "node scripts/svg-optim",
     "test": "jest --runInBand",
     "test:coverage": "jest --runInBand --coverage",
     "test:watch": "jest --runInBand --watch"
