--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-latest": "6.24.1",
     "babel-preset-react": "6.24.1",
     "chalk": "2.0.1",
+    "cheerio": "1.0.0-rc.2",
     "commitizen": "2.9.6",
     "cz-customizable": "5.0.0",
     "enzyme": "2.9.1",
