chore(root): replace 'lerna bootstrap' command in travis config
Symlinked dependencies, created by 'lerna bootstrap' don't work in Travis CI. Use manual 'npm
install' instead.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 install:
   - npm install
   - npm install -g lerna@2.0.0 codecov
-  - lerna bootstrap
+  - lerna exec --parallel -- npm install
 script:
   - lerna run lint --parallel
   - lerna run test:coverage --parallel
