--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "babel-preset-latest": "6.24.1",
     "babel-preset-react": "6.24.1",
     "chalk": "2.0.1",
+    "cheerio": "1.0.0-rc.2",
     "commitizen": "2.9.6",
+    "common-tags": "1.4.0",
     "cz-customizable": "5.0.0",
     "enzyme": "2.9.1",
     "eslint": "4.2.0",
@@ -26,6 +28,7 @@
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-react": "7.1.0",
     "eslint-plugin-standard": "3.0.1",
+    "fs-extra": "4.0.0",
     "husky": "0.14.3",
     "jest": "20.0.4",
     "lerna": "2.0.0",
@@ -35,7 +38,8 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-test-renderer": "15.6.1",
-    "rimraf": "2.6.1"
+    "rimraf": "2.6.1",
+    "walk": "2.3.9"
   },
   "devEngines": {
     "node": ">=8.0.0",
