chore(icons): add namespace for 'developer icons'

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -21,12 +21,13 @@
   "files": [
     "lib",
     "md",
-    "sp"
+    "sp",
+    "dv"
   ],
   "scripts": {
     "build:cjs": "BABEL_ENV=cjs babel src/ --out-dir lib/ --ignore spec.js",
     "build:es": "BABEL_ENV=es babel src/ --out-dir . --ignore spec.js",
-    "clean": "rimraf lib/ sp/ md/",
+    "clean": "rimraf lib/ sp/ md/ dv/",
     "lint": "eslint src/ --cache --ext js,jsx",
     "pregen": "rimraf src/* docs/*",
     "gen": "node scripts/generate",
